--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="6s2uP1_JPnxuVW_ewp1HGbFx577WJujWlDVeZTtG3RI" />
   </head>
 
   <body>
