--- a/index.html
+++ b/index.html
@@ -85,6 +85,8 @@
     </style>
     
     <meta name="google-site-verification" content="6s2uP1_JPnxuVW_ewp1HGbFx577WJujWlDVeZTtG3RI" />
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6218065184548996"
+     crossorigin="anonymous"></script>
   </head>
 
   <body>
